fix bugs and add win release #92