@@ -1,12 +1,7 @@
 @echo off
-
-REM Check whether the JRE is included
-IF EXIST "%~dp0\..\jre" (
-
-REM for BEAST version that includes JRE
-    "%~dp0\..\jre\bin\java" -Xss256m -Xmx8g -cp "%~dp0\..\lib\launcher.jar" beast.pkgmgmt.launcher.LogCombinerLauncher %*
-
-) ELSE (
-REM for version that does not include JRE
-    java -Xss256m -Xmx8g -cp "%~dp0\..\lib\launcher.jar" beast.pkgmgmt.launcher.LogCombinerLauncher %*
-)
+set "BUNDLE_HOME=%~dp0.."
+"%BUNDLE_HOME%\runtime\bin\java.exe" ^
+    --module-path "%BUNDLE_HOME%\app" ^
+    --add-modules ALL-MODULE-PATH ^
+    -Xss256m -Xmx8g -Duser.language=en -Dfile.encoding=UTF-8 ^
+    -m beast.pkgmgmt/beast.pkgmgmt.launcher.LogCombinerLauncher %*
